Updated to working state.
Fancied up makefile to only clean up build files on make makelibs (for npm)
Added Example
Updated all JS code to use new C++ code

Updated C++ code to scan for header symbols moving most of the work to the C++ code instead of js.
Removed .gitignore from msgpack so build files will show up on git status and remind me to do a clean before npm publish..

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "test": "runTests.js",
-    "preinstall": "make",
+    "preinstall": "make makelibs",
     "preuninstall": "make clean"
   },
   "engines": {
