--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
   "name": "wormhole",
-  "description": "A MessagePack based message passing parser for Node.JS",
+  "description": "A MessagePack based message passing system for Node.JS",
+  "keywords": ["message","pass","stream","parser","msgpack","messagepack","fast"],
   "version": "0.1.0",
   "homepage": "http://aikar.co/wormhole",
   "repository": {
     "type": "git",
     "url": "git://github.com/aikar/wormhole.git"
   },
-  "author": "Aikar <aikar@aikar.co> (http://aikar.co)",
+  "author": "Aikar <aikar@aikar.co>",
   "main": "lib/wormhole.js",
   "directories": {
     "lib": "lib"
   },
+  "devDependencies": {
+    "vows": ""
+  },
   "scripts": {
-    "test": "runTests.js",
+    "test": "./runTest.js",
     "preinstall": "make makelibs",
     "preuninstall": "make clean"
   },
   "engines": {
-    "node": ">=4 || 5"
+    "node": ">=0.4.0"
   }
 }
