Updating for debug
Adding msgpack stuff to gitignore
Adding debug buffer to .js for testing (trying to get mp team to look into problem)
Commented out echo back server example for testing

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,21 @@
 lib/mpBindings.node
 lib/whBindings.node
+support/msgpack/config.h
+support/msgpack/config.log
+support/msgpack/config.status
+support/msgpack/dist
+build
+.lock-wscript
+support/msgpack/src/.deps
+support/msgpack/libtool
+support/msgpack/*.o
+support/msgpack/*.lo
+support/msgpack/src/.libs
+support/msgpack/src/*.o
+support/msgpack/src/*.lo
+support/msgpack/src/msgpack/version.h
+support/msgpack/test/.deps
+support/msgpack/src/*.la
+support/msgpack/Makefile
+support/msgpack/*/Makefile
+support/msgpack/stamp-h1
