--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "vows": ""
   },
   "scripts": {
-    "test": "./runTest.js",
+    "test": "./runTest.js"
   },
   "engines": {
     "node": ">=0.4.0"
